--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.4",
+    "@rollup/plugin-dynamic-import-vars": "^2.1.2",
     "axios": "^1.6.8",
+    "html-to-pdf-js": "^0.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
