--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-dynamic-import-vars": "^2.1.2",
     "axios": "^1.6.8",
     "html-to-pdf-js": "^0.9.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.2.0",
